Support Java 8 🎉 (#2)
* Support Java 8 🎉

* ci: Distribution to temurin

* docs: README example update

* ci: build for other Java versions

* ci: multiple java versions cd.yml

* ci: Add Java 21 to matrix